Implement image captioning model with fine-tuning and beam search variants
- Added `variante_finetuning.py` for fine-tuning the VGG16 encoder in the captioning model.
- Introduced `variante_beam_search.py` to implement beam search for generating captions.
- Enhanced `utils.py` with new functions for caption tokenization and custom collate function for DataLoader.
- Updated the vocabulary building process to include special tokens.
- Created `validacion_externa.py` for validating the model with external images and generating captions.
- Developed LaTeX document `tarea.tex` for project report, detailing methodology, results, and analysis.
- Improved image preprocessing transformations for training and validation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,24 @@
 # PyTorch con soporte CUDA 11.8
-torch==2.2.1+cu118
-torchvision==0.17.1+cu118
-torchaudio==2.2.1+cu118
--f https://download.pytorch.org/whl/torch_stable.html
+torch
+torchvision
+torchaudio
 
-# Transformers para modelos de captioning
-transformers==4.35.2
+# MS-COCO API
+pycocotools
+
+# Métricas de evaluación
+torchmetrics
+
+# Procesamiento de lenguaje natural
+nltk
 
 # Procesamiento de imágenes
-Pillow==10.1.0
+pillow
+
+# Visualización
+matplotlib
 
 # Utilidades
-numpy==1.25.2
-
-
-kagglehub
-
-nltk
-numpy==1.25.2  
+numpy
+tqdm
+  
